# limen

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: lines.yml
apps/desktop/: AGENTS.md  README.md  components.json  index.html  package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  auth-listener.html  installer.nsi  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/installer/: README.md
apps/desktop/src-tauri/installer/lang/: de.nsh  en.nsh  tr.nsh  zh.nsh
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  models.rs
apps/desktop/src-tauri/src/api/: loaders.rs  mod.rs  modrinth.rs
apps/desktop/src-tauri/src/auth/: microsoft.rs  mod.rs
apps/desktop/src-tauri/src/commands/: auth.rs  java.rs  loaders.rs  minecraft.rs  mod.rs  modpack.rs  mods.rs  profile.rs  session.rs  settings.rs  skin.rs  updater.rs  utils.rs
apps/desktop/src-tauri/src/discord/: mod.rs  rpc.rs
apps/desktop/src-tauri/src/minecraft/: config.rs  downloader.rs  fabric_installer.rs  forge_installer.rs  launcher.rs  log_parser.rs  mod.rs  neoforge_installer.rs  process_tracker.rs  quilt_installer.rs
apps/desktop/src/components/: EditProfileModal.tsx  FilterModal.tsx  LoginRequiredModal.tsx  NewProfileModal.tsx  SelectProfileModal.tsx  SettingsModal.tsx  Sidebar.tsx  SkinCardViewer.tsx  SkinHeadRenderer.ts  SkinHeadViewer.tsx  SkinModelSelectorModal.tsx  (+5 more)
scripts/: limen.js
(+29 files in other folders)
