[package]
name = "limen"
version = "0.1.0"
description = "Premium Minecraft Mod Manager"
authors = ["Limen Team"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "limen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "native-tls-vendored", "multipart", "stream"] }
futures = "0.3"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.30"
dirs = "5.0"
md5 = "0.7"
sha1 = "0.10"
urlencoding = "2.1"
url = "2.5"
uuid = { version = "1.10", features = ["v4"] }
zip = "2.1"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"
lzma-rs = "0.3"
futures-util = "0.3"
keyring = "3.0"
once_cell = "1.20"
discord-rich-presence = "0.2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
